--- a/views/login.pug
+++ b/views/login.pug
@@ -12,4 +12,5 @@ block content
       input(type="password" name="password" id="password")
       button(type="submit") Log In
     div
-      p: a(href='/users/register') Don't have an account? Sign Up Here!
+      p Don't have an account?
+        a(href='/users/register') Sign Up
